[web]Mod: issue #6396 remove loading text on mobile property list

--- a/source/web/src/static/styles/propertyList.less
+++ b/source/web/src/static/styles/propertyList.less
@@ -228,6 +228,7 @@ main {
             @media @phone {
                 font-size:14px;
                 margin:0 0 10px 12px;
+                display: none;
             }
 
             .number {
@@ -244,7 +245,7 @@ main {
 
             @media @phone {
                 width:100%;
-                margin-top:30px;
+                margin-top:0px;
                 margin-bottom:0px;
             }
 
